--- a/package.json
+++ b/package.json
@@ -21,20 +21,22 @@
   },
   "dependencies": {
     "@carry0987/utils": "^3.8.3",
-    "@nestjs/common": "^10.4.7",
+    "@line/bot-sdk": "^7.7.0",
+    "@nestjs-line/messaging": "0.0.4-alpha.16",
+    "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.7",
-    "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/core": "^9.4.3",
+    "@nestjs/platform-express": "^9.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
-    "reflect-metadata": "^0.2.2",
+    "reflect-metadata": "^0.1.12",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.7",
     "@nestjs/schematics": "^10.2.3",
-    "@nestjs/testing": "^10.4.7",
+    "@nestjs/testing": "^9.4.3",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.9.0",
