Add Broadcast Function

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 # Environment variables for the application
-PORT=3000
+PORT
 ENV_TEST=true
+CHANNEL_ID
+LINE_REPLY_URL
+ACCESS_TOKEN
+CHANNEL_SECRET
+USER_ID
