--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@carry0987/utils": "^3.8.3",
     "@line/bot-sdk": "^7.7.0",
     "@nestjs-line/messaging": "0.0.4-alpha.16",
+    "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^9.4.3",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^9.4.3",
     "@nestjs/platform-express": "^9.4.3",
+    "@nestjs/schedule": "^4.1.1",
+    "axios": "^1.7.7",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
